--- a/package.json
+++ b/package.json
@@ -29,13 +29,20 @@
   },
   "homepage": "https://github.com/druv5319/Sneaks-API#readme",
   "dependencies": {
+    "@imgly/background-removal": "^1.5.5",
+    "@imgly/background-removal-node": "^1.4.3",
+    "axios": "^1.7.4",
+    "canvas": "^2.11.2",
     "cheerio": "^1.0.0-rc.3",
     "core-util-is": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "got": "^11.6.0",
+    "got": "^11.8.6",
     "mongoose": "^5.10.3",
-    "request": "^2.65.0"
+    "path": "^0.12.7",
+    "request": "^2.88.2",
+    "sharp": "^0.33.5",
+    "sneaks-api": "file:"
   }
 }
