--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "got": "^11.8.6",
     "mongoose": "^5.10.3",
     "path": "^0.12.7",
+    "request": "^2.88.2",
     "sharp": "^0.33.5",
     "sneaks-api": "file:"
   }
